-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8u51, 9
-
Component/s: javafx
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8156691 | 8u112 | Alexander Matveev | P3 | Resolved | Fixed | |
| JDK-8157051 | 8u102 | Alexander Matveev | P3 | Resolved | Fixed | b08 |
| JDK-8159116 | 8u92 | Alexander Matveev | P3 | Resolved | Fixed | b33 |
I noticed intermittent crash when MediaPlayer is disposed. This issue was reproduced with application which creates and dispose MediaPlayer in the loop.
- backported by
-
JDK-8156691 Intermittent crash when disposing MediaPlayer
-
- Resolved
-
-
JDK-8157051 Intermittent crash when disposing MediaPlayer
-
- Resolved
-
-
JDK-8159116 Intermittent crash when disposing MediaPlayer
-
- Resolved
-