8154287: Intermittent crash when disposing MediaPlayer

Reviewed-by: kcr, ddehaven